tests/parser/fail/v22_fail_old_range_syntax_removed.ep
# COMPILE_FAIL: Expected LBRACE
fun main(): void {
    for i in 0:3 {
    }
}
